Add the images owner, build containers on hosts and image API
